# newsman

./: .env  .gitignore  Cargo.toml  DOCUMENTATION.md  PKGBUILD  README.md  mailing_list.sql  newsman.install  newsman.service  newsman.sql  newsman.toml  sqlx-data.json
UserGuide/: UserGuide.tex
migrations/: 20230306_up.sql
src/: config.rs  emails.rs  job.rs  main.rs  server.rs
src/tests/: lib.rs
