[package]
name = "newsman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[env]
DATABASE_URL='mysql://root:password@localhost/emails'

[dependencies]
dotenv = "0.15.0"
env_logger = "0.10.0"
lettre = { version = "0.10.4", features = ["builder"] }
log = "0.4.18"
sqlx = { version = "0.6.3", features = ["mysql", "runtime-tokio-native-tls"] }
tokio = { version = "1.28.2", features = ["macros"] }
anyhow = "1.0"
clap = { version = "4.3.1", features = ["derive"] }
